create hero interface/schema and import to the component.html - render data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
 
 <h1>{{title}}</h1>
 
+<!--This app calls on this heroes component; renders data from heroes component-->
+<app-heroes></app-heroes>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
