Make hero name updateable.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,15 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<div class="container">
 <h1>{{title}}</h1>
 
 <!--This app calls on this heroes component; renders data from heroes component-->
+
+
 <app-heroes></app-heroes>
+
+</div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
