--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,9 @@
-<h2>{{hero.name}} Details</h2>
+<h2>{{hero.name | uppercase}} Details</h2>
 <p><strong>Hero ID: </strong>{{hero.id}}</p>
-<p><strong>Name: </strong>{{hero.name}}</p>
+
+  <!--[(ngModel)]  is Two way binding; binds hero.name property tho this HTML textbox so data can flow in both directions -->
+<div>
+  <label>name:
+    <input [(ngModel)]="hero.name" placeholder="name"/>
+  </label>
+</div>
