Add mockup list of heroes and style page generically

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div class="container">
-<h1>{{title}}</h1>
+
+<div class="container main">
 
 <!--This app calls on this heroes component; renders data from heroes component-->
 
