--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,11 @@
 /* Application-wide Styles */
 h1 {
-  color: #369;
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
 h2, h3 {
-  color: #444;
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
@@ -15,6 +15,15 @@ body {
 body, input[type="text"], button {
   color: #333;
   font-family: Cambria, Georgia;
+}
+.container.main {
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    padding: 15px;
+    transform: translate(-50%, -50%);
 }
 /* everywhere else */
 
